Test/exports/DatatypeExport.dfy.expect
DatatypeExport.dfy(41,24): Error: unresolved identifier: CT1
DatatypeExport.dfy(46,11): Error: member CT2 does not exist in type T
DatatypeExport.dfy(48,34): Error: type T does not have a member CT1?
DatatypeExport.dfy(48,53): Error: type T does not have a member X
DatatypeExport.dfy(56,24): Error: unresolved identifier: CT1
5 resolution/type errors detected in DatatypeExport.dfy
